# fastapi-playground

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 039d58b45ac4_added_users_table.py  4c2fdf5187b9_added_foreignkey_to_author_id.py  541d0a647ca4_init.py  75afce035b90_changed_to_author_id.py  8baae8e87005_deleted_revoke_column.py  c2a374f115da_init.py  ec8e61247f0b_added_refresh_tokens_table.py
frontend/: auth.html  books.html  index.html  profile.html
frontend/css/: style.css
frontend/js/: config.js
keys/: README.md
nginx/: nginx.conf
src/app/: exception_handlers.py  exception_hendlers.py  exceptions.py  main.py  main_router.py  middlewares.py  models.py
src/app/api/: deps.py
src/app/api/routers/: book.py  user.py
src/app/core/: __init__.py  config.py  database.py  enums.py  lifespan.py  settings.py
src/app/repositories/: book_repository.py  refresh_token_repository.py  user_repository.py
src/app/routers/: __init__.py  book.py  deps.py  health.py  root.py  user.py
src/app/schemas/: __init__.py  book_schemas.py  user_schemas.py
src/app/services/: book_service.py  user_service.py
src/app/utils/: __init__.py  jwt.py
