[project]
name = "fastapi-playground"
version = "0.1.0"
description = "FastAPI playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.1",
    "fastapi>=0.136.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.ruff]
exclude = ["alembic"]
